--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+<meta property="og:title" content="문화탐방">
+<meta property="og:description" content="재밌는건 나누자고! 문탐에 남겨줘 너의 원픽 문화생활!">
+<meta property="og:image" content="../static/logo.png">
 <link rel="apple-touch-icon" sizes="57x57" href="/static/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/static/favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/static/favicon/apple-icon-72x72.png">
