카테고리 이슈 수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -376,7 +376,7 @@
         <label class="input-group-text" for="ctype">구분</label>
         <select class="form-select" id="ctype">
             <option selected>선택하기</option>
-            <option name="thearter">thearter</option>
+            <option name="theater">theater</option>
             <option name="movies">movies</option>
             <option name="consert">consert</option>
         </select>
