--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,10 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <!-- icons8 -->
+    <link rel="stylesheet"
+          href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -33,6 +37,8 @@
             crossorigin="anonymous"></script>
 
     <title>문탐-문화탐방</title>
+    <link rel="stylesheet" href="../static/css/index.css">
+    <script src="../static/js/index.js"></script>
     <style>
         .section1 {
             color: white;
@@ -173,7 +179,6 @@
             margin: auto 0 0 40px;
         }
     </style>
-
     <script>
         function All() {
             listing()
@@ -206,67 +211,6 @@
         $(document).ready(function () {
             listing();
         }, {once: true});
-
-        function listing() {
-            $('#card-box').empty()
-
-            $.ajax({
-                type: "GET",
-                url: `/culture`,
-                data: {},
-                success: function (response) {
-                    let rows = response['posting']
-                    console.log(rows)
-                    for (let i = 0; i < rows.length; i++) {
-                        let title = rows[i]['title']
-                        let url = rows[i]['url']
-                        let star = rows[i]['star']
-                        let comment = rows[i]['comment']
-
-
-                        let star_image = '⭐'.repeat(star)
-
-                        let temp_html = ` <div class="col">
-                                  <div class="card">
-                                    <img src="${url}"
-                                         class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                      <h5 class="card-title">${title}</h5>
-                                      <p>${star_image}</p>
-                                      <p class="mycommnt">${comment}</p>
-                                    <div class="card_box_btn">
-                                      <button type="button" class="btn btn-dark" onclick="">수정하기</button>
-                                      <button type="button" class="btn btn-light" onclick="deleat()">삭제</button>
-                                    </div>
-                                    </div>
-                                  </div>
-                                </div>`
-
-                        $('#card-box').append(temp_html)
-                    }
-                }
-            })
-        }
-
-
-        function posting() {
-            let url = $('#url').val()
-            let title = $('#title').val()
-            let star = $('#star').val()
-            let comment = $('#comment').val()
-            let ctype = $('#ctype').val()
-
-
-            $.ajax({
-                type: 'POST',
-                url: '/culture',
-                data: {url_give: url, title_give: title, star_give: star, comment_give: comment, ctype_give: ctype},
-                success: function (response) {
-                    alert(response['msg'])
-                    window.location.reload()
-                }
-            });
-        }
 
         function getctype(str) {
             $('#card-box').empty()
@@ -325,11 +269,7 @@
         }
 
     </script>
-
-
 </head>
-
-
 <body>
 <div class="section1">
     <div class="d-grid gap-2 d-md-block menu_box">
@@ -385,9 +325,9 @@
                   style="height: 100px"></textarea>
         <label for="comment">Comments</label>
     </div>
-    <div class="btn_box">
-        <button type="button" class="btn btn-dark" onclick="posting()">기록하기</button>
-        <button type="button" class="btn btn-light" onclick="close_box()">닫기</button>
+    <div class="mybtns">
+        <button onclick="posting()" type="button" class="btn btn-dark">기록하기</button>
+        <button onclick="close_box()" type="button" class="btn btn-outline-dark">닫기</button>
     </div>
 </div>
 <div class="wrap">
