--- a/templates/login.html
+++ b/templates/login.html
@@ -12,16 +12,17 @@
 
     <link rel="icon" type="image/png" sizes="192x192" href="/static/favicon/android-icon-192x192.png">
 
-<!--    <link rel="manifest" href="../static/favicon/manifest.json">-->
-<!--    <meta name="msapplication-TileColor" content="#ffffff">-->
-<!--    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">-->
-<!--    <meta name="theme-color" content="#ffffff">-->
-
     <!-- Bulma CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/login.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+
+
     <script src="../static/js/login.js"></script>
+
 
 </head>
 <body>
@@ -59,7 +60,8 @@
                                 <input id="input-password" class="input" type="password" placeholder="비밀번호">
                                 <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
                             </div>
-                            <p id="help-password" class="help is-hidden">영문과 숫자 조합의 8-20자의 비밀번호를 설정해주세요. 특수문자(!@#$%^&*)도 사용
+                            <p id="help-password" class="help is-hidden">영문과 숫자 조합의 8-20자의 비밀번호를 설정해주세요. 특수문자(!@#$%^&*)도
+                                사용
                                 가능합니다.</p>
                         </div>
 
