--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,12 +1,19 @@
-* {margin: 0 0 0 0;}
+* {
+    margin: 0 0 0 0;
+}
+
+body {
+    height: 100vh;
+    background: #fff8f9;
+}
 
 .section1 {
     color: white;
     width: 100%;
     height: 350px;
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://www.jeongdong.or.kr/static/portal/img/HKPU_04_01_pic2.jpg);
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("https://assets.teenvogue.com/photos/5d34abc9d4f0850008e33d4f/16:9/w_2560%2Cc_limit/GettyImages-584925310.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: center 20%;
     background-color: black;
     display: flex;
     flex-direction: column;
@@ -21,6 +28,10 @@
     background-size: cover;
 }
 
+.button {
+    font-weight: 600;
+}
+
 .button.is-sparta {
     background-color: #e8344e;
     border-color: transparent;
@@ -28,11 +39,12 @@
 }
 
 .button.is-sparta.is-outlined {
-    background-color: transparent;
-    border-color: #e8344e;
+    background-color: white;
+    border-color: whitesmoke;
     color: #e8344e !important;
 }
 
 .help {
     color: gray;
 }
+
