--- a/static/css/index.css
+++ b/static/css/index.css
@@ -9,6 +9,7 @@ html, body {
 
 body {
     background: #fff8f9;
+    height: 100vh;
 }
 
 .section1 {
@@ -223,3 +224,18 @@ body {
     color: gray;
 }
 
+.like-icon {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.like-icon > i{
+    font-size: 24px;
+    margin-right: 15px;
+}
+
+.like-icon > .like{
+    color: red;
+}
